--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <h1>kdjfkadjbf</h1>
+    <div class="container">
+        <h1>010 Automate</h1>
+        <h6>L'automate 010 est un automate d'états fini déterministe qui reconnaît les mots avec un nombre pair de '0' et impair de '1'</h6>
+        <button class="startBtn">Démarrer</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 
