--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="container">
-        <h1>010 Automate</h1>
-        <h6>L'automate 010 est un automate d'états fini déterministe qui reconnaît les mots avec un nombre pair de '0' et impair de '1'</h6>
-        <button class="startBtn">Démarrer</button>
+        <h1 id="title">010 Automate</h1>
+        <h6 id="subTitle">L'automate 010 est un automate d'états fini déterministe qui reconnaît les mots avec un nombre pair de '0' et impair de '1'</h6>
+        <button class="startBtn" id="start">Démarrer</button>
     </div>
     <script src="./script.js"></script>
 </body>
