adding 2nd scean

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="container">
         <h1 id="title">010 Automate</h1>
         <h6 id="subTitle">L'automate 010 est un automate d'états fini déterministe qui reconnaît les mots avec un nombre pair de '0' et impair de '1'</h6>
-        <button class="startBtn" id="start">Démarrer</button>
+        <button class="startBtn" id="start" onclick="Start()">Démarrer</button>
+        <div class="main" id="main" style="display: none;">
+            <input type="text" class="Word" placeholder="Entrez le mot à lire">
+            <img src="./automate.png" alt="Automate">
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
