--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h6 id="subTitle">L'automate 010 est un automate d'états fini déterministe qui reconnaît les mots avec un nombre pair de '0' et impair de '1'</h6>
         <button class="startBtn" id="start" onclick="Start()">Démarrer</button>
         <div class="main" id="main" style="display: none;">
-            <input type="text" class="Word" placeholder="Entrez le mot à lire">
+            <input type="text" id="word" class="Word" placeholder="Entrez le mot à lire">
             <img src="./automate.png" alt="Automate">
         </div>
     </div>
